@@ -58,7 +58,7 @@ class, which you can make as fancy as you like.
 Debugger commands
 =================
 
-(!) statement
+($) statement
         Execute the (one-line) statement in the context of the current
         stack frame.  The exclamation point can be omitted unless the
         first word of the statement resembles a debugger command.  To
